feat: view booking-list

--- a/src/main/resources/templates/client/layout.html
+++ b/src/main/resources/templates/client/layout.html
@@ -119,6 +119,7 @@
 <script th:src="@{/client/assets/info-account.js}"></script>
 <script th:src="@{/client/assets/like.js}"></script>
 <script th:src="@{/client/assets/order-view.js}"></script>
+<script th:src="@{/client/assets/order-list.js}"></script>
 <script th:inline="javascript">
     /*<![CDATA[*/
 
