--- a/src/main/resources/templates/client/fragments/order-view.html
+++ b/src/main/resources/templates/client/fragments/order-view.html
@@ -18,6 +18,7 @@
 								<div class="row">
 									<div class="col-lg-6 col-md-6">
 										<table class="table table-mobile">
+											<h4>THÔNG TIN ĐƠN</h4>
 											<tbody>
 												<tr>
 													<th>Mã đơn hàng</th>
@@ -25,30 +26,52 @@
 												</tr>
 												<tr>
 													<th>Ngày đặt hàng</th>
-													<th id="order__view__creact__day">1</th>
+													<th id="order__view__create__day">1</th>
 												</tr>
+
 												<tr>
-													<th>Ghi chú</th>
-													<th id="order__view__note">1</th>
-												</tr>
-												<tr>
-													<th>Thanh toán</th>
+													<th>Hình thức thanh toán </th>
 													<th id="order__view__pay">1</th>
 												</tr>
 												<tr>
-													<th>Vận chuyển</th>
-													<th id="order__view__ship">1</th>
+													<th>Ngày bắt đầu</th>
+													<th id="order__view__start__date">1</th>
+												</tr>
+												<tr>
+													<th>Ngày kết thúc</th>
+													<th id="order__view__end__date">1</th>
 												</tr>
 												<tr>
 													<th>Trạng thái</th>
 													<th id="order__view__status">1</th>
+												</tr>
+												<tr>
+													<th>Tên xe</th>
+													<th id="order__view__car">1</th>
+												</tr>
+												<tr>
+													<th>Hãng xe</th>
+													<th id="order__view__brand">1</th>
+												</tr>
+												<tr>
+													<th>Chủ xe</th>
+													<th id="order__view__owner">1</th>
 												</tr>
 											</tbody>
 										</table>
 									</div>
 									<div class="col-lg-6 col-md-6">
 										<table class="table table-mobile">
+											<h4>THÔNG TIN KHÁCH HÀNG</h4>
 											<tbody>
+											<tr>
+												<th>Họ tên</th>
+												<th id="order__view__name">1</th>
+											</tr>
+											<tr>
+												<th>Số điện thoại</th>
+												<th id="order__view__phone">1</th>
+											</tr>
 												<tr>
 													<th>Địa chỉ</th>
 													<th id="order__view__address">1</th>
@@ -58,36 +81,12 @@
 													<th id="order__view__email">1</th>
 												</tr>
 												<tr>
-													<th>Họ</th>
-													<th id="order__view__first__name">1</th>
-												</tr>
-												<tr>
-													<th>Tên</th>
-													<th id="order__view__last__name">1</th>
-												</tr>
-												<tr>
-													<th>Số điện thoại</th>
-													<th id="order__view__phone">1</th>
+													<th>Tổng tiền</th>
+													<th id="order__view__total">1</th>
 												</tr>
 											</tbody>
 										</table>
 									</div>
-								</div>
-								<div class="row">
-									<table class="table table-wishlist table-mobile">
-										<thead>
-											<tr>
-												<th>Sản phẩm</th>
-												<th>Giá</th>
-												<th>Số lượng</th>
-												<th>Giảm giá</th>
-												<th>Tổng tiền</th>
-											</tr>
-										</thead>
-										<tbody id="order__view__body">
-
-										</tbody>
-									</table>
 								</div>
 							</div>
 						</div>
