--- a/src/main/resources/templates/client/order/orderlist.html
+++ b/src/main/resources/templates/client/order/orderlist.html
@@ -96,9 +96,10 @@
                                role="button" aria-pressed="true"
                                th:href="@{/car/booking/confirm-pick-up(id=${item.id})}">Đã nhận
                                 xe</a>
-                            <a style="padding: 5px 0; width: 20%" class="btn btn-danger active"
-                               role="button" aria-pressed="true"
-                               th:href="@{/car/booking/cancel(id=${item.id})}">Hủy đặt</a>
+                            <a style="padding: 5px 0; width: 30%" class="btn btn-danger active"
+                               role="button"
+                               th:data-id="${item.id}"
+                               th:onclick="cancelSubmit(this.getAttribute('data-id'))">Hủy đặt</a>
                         </div>
                         <div th:case="'PENDING_DEPOSIT'" class="d-flex">
                             <a class="btn btn-info"
