--- a/src/main/resources/templates/client/order/orderlist.html
+++ b/src/main/resources/templates/client/order/orderlist.html
@@ -84,7 +84,7 @@
                         </div>
                     </td>
                     <td th:switch="${item.status}" class="col-2 ">
-                        <div th:case="'CONFIRM'" class="d-flex">
+                        <div th:case="'CONFIRM'" >
                             <a class="btn btn-info"
                                style="padding: 5px 0; width: 20%"
                                role="button"
@@ -101,7 +101,7 @@
                                th:data-id="${item.id}"
                                th:onclick="cancelSubmit(this.getAttribute('data-id'))">Hủy đặt</a>
                         </div>
-                        <div th:case="'PENDING_DEPOSIT'" class="d-flex">
+                        <div th:case="'PENDING_DEPOSIT'">
                             <a class="btn btn-info"
                                style="padding: 5px 0; width: 30%"
                                role="button"
@@ -113,7 +113,7 @@
                                th:data-id="${item.id}"
                                th:onclick="cancelSubmit(this.getAttribute('data-id'))">Hủy đặt</a>
                         </div>
-                        <div th:case="'IN_PROGRESS'" class="d-flex">
+                        <div th:case="'IN_PROGRESS'">
                             <a class="btn btn-info"
                                style="padding: 5px 0; width: 30%"
                                role="button"
@@ -124,7 +124,7 @@
                                role="button" aria-pressed="true"
                                th:href="@{/car/booking/return-car(id=${item.id})}">Trả xe</a>
                         </div>
-                        <div th:case="'PENDING_PAY'" class="d-flex">
+                        <div th:case="'PENDING_PAY'">
                             <a class="btn btn-info"
                                style="padding: 5px 0; width: 30%"
                                role="button"
@@ -132,7 +132,7 @@
                                th:data-id="${item.id}"
                                th:onclick="orderView(this.getAttribute('data-id'))"> Chi tiết</a>
                         </div>
-                        <div th:case="'CANCEL'" class="d-flex">
+                        <div th:case="'CANCEL'">
                             <a class="btn btn-info"
                                style="padding: 5px 0; width: 30%"
                                role="button"
@@ -140,7 +140,7 @@
                                th:data-id="${item.id}"
                                th:onclick="orderView(this.getAttribute('data-id'))"> Chi tiết</a>
                         </div>
-                        <div th:case="'COMPLETED'" class="d-flex">
+                        <div th:case="'COMPLETED'">
                             <a class="btn btn-info"
                                style="padding: 5px 0; width: 30%"
                                role="button"
