--- a/src/main/resources/templates/client/cart/check-out.html
+++ b/src/main/resources/templates/client/cart/check-out.html
@@ -124,7 +124,7 @@
                                 </table>
                                 <div class="payment-method">
                                     <div class="item-payment">
-                                        <input type="radio" id="wallet" name="paymentMethod" value="wallet">
+                                        <input type="radio" id="wallet" name="paymentMethod" value="wallet" checked>
                                         <label for="wallet">Use your wallet. Balance: <span class="summary-total" th:text="${user.balance}"></span></label> <br>
                                     </div>
                                     <div class="item-payment">
