--- a/src/main/resources/templates/client/order/orderlist.html
+++ b/src/main/resources/templates/client/order/orderlist.html
@@ -75,9 +75,9 @@
                         <div
                                 th:switch="${item.status}">
                             <p th:case="'PENDING_DEPOSIT'" class="text-warning">Đang
-                                chờ xác nhận</p>
+                                chờ xác nhận cọc</p>
                             <p th:case="'PENDING_PAY'" class="text-warning">Đang
-                                chờ thanh toán</p>
+                                chờ xác nhận thanh toán</p>
                             <p th:case="'CONFIRM'" class="text-info">Đã xác nhận</p>
                             <p th:case="'CANCEL'" class="text-danger">Đã hủy</p>
                             <p th:case="'COMPLETED'" class="text-success">Đã hoàn thành</p>
@@ -108,6 +108,7 @@
                                th:href="@{/car/booking/return-car(id=${item.id})}">Trả xe</a>
                         </div>
                         <div th:case="'PENDING_PAY'">
+
                         </div>
                         <div th:case="'CANCEL'">
                         </div>
