--- a/src/main/resources/templates/client/fragments/header.html
+++ b/src/main/resources/templates/client/fragments/header.html
@@ -49,7 +49,7 @@
 								<span class="sr-only">Toggle mobile menu</span> <i class="icon-bars"></i>
 							</button>
 							<a th:href="@{/car/home}" class="logo"> <img th:src="@{/client/assets/images/demos/demo-14/logo.png}"
-									alt="Molla Logo" width="105" height="25">
+									alt="Rental Car" width="105" height="25">
 							</a>
 						</div>
 						<!-- End .col-xl-3 col-xxl-2 -->
@@ -192,9 +192,9 @@
 												<a th:href="@{/car/account/info-account}">Thông
 													tin tài khoản</a>
 											</li>
-											<li>
-												<a th:href="@{/car/like}">Danh sách yêu thích</a>
-											</li>
+<!--											<li>-->
+<!--												<a th:href="@{/car/like}">Danh sách yêu thích</a>-->
+<!--											</li>-->
 											<li>
 												<a th:href="@{/car/booking-list}">Danh sách đặt hàng</a>
 											</li>
