--- a/src/main/resources/templates/client/client/client.html
+++ b/src/main/resources/templates/client/client/client.html
@@ -150,8 +150,7 @@
                                         <!-- End .product-action-vertical -->
 
                                         <div class="product-action">
-                                            <a th:href="@{/car/check-out(id=${item.id})}" data-toggle="modal"
-                                           th:data-id="${item.id}"
+                                            <a th:href="@{/car/product-detail(id=${item.id})}"
                                            class="btn-product btn-cart"><span>Xem</span></a>
                                         </div>
                                         <!-- End .product-action -->
