--- a/src/main/resources/templates/client/fragments/quick-view.html
+++ b/src/main/resources/templates/client/fragments/quick-view.html
@@ -35,28 +35,28 @@
 									<div class="col-lg-5 col-md-6">
 										<div id="bodyQuickView"></div>
 
-										<div class="details-filter-row details-row-size">
-											<label for="cart_size">Màu sắc:</label>
-											<div class="select-custom">
-												<select name="cart_size" id="cart_size"
-													class="form-control">
-													<option value="s">Trắng</option>
-													<option value="m">Đỏ</option>
-													<option value="l">Đen</option>
-													<option value="xl">Ghi</option>
-												</select>
-											</div>
-											<!-- End .select-custom -->
-										</div>
+<!--										<div class="details-filter-row details-row-size">-->
+<!--											<label for="cart_size">Màu sắc:</label>-->
+<!--											<div class="select-custom">-->
+<!--												<select name="cart_size" id="cart_size"-->
+<!--													class="form-control">-->
+<!--													<option value="s">Trắng</option>-->
+<!--													<option value="m">Đỏ</option>-->
+<!--													<option value="l">Đen</option>-->
+<!--													<option value="xl">Ghi</option>-->
+<!--												</select>-->
+<!--											</div>-->
+<!--											&lt;!&ndash; End .select-custom &ndash;&gt;-->
+<!--										</div>-->
 
-										<div class="details-filter-row details-row-size">
-											<label for="cart_qty">Số lượng:</label>
-											<div class="product-details-quantity">
-												<input type="number" id="cart_qty" name="cart_qty" class="form-control" value="1"
-													min="1" max="10" step="1" data-decimals="0" required>
-											</div>
-											<!-- End .product-details-quantity -->
-										</div>
+<!--										<div class="details-filter-row details-row-size">-->
+<!--											<label for="cart_qty">Số lượng:</label>-->
+<!--											<div class="product-details-quantity">-->
+<!--												<input type="number" id="cart_qty" name="cart_qty" class="form-control" value="1"-->
+<!--													min="1" max="10" step="1" data-decimals="0" required>-->
+<!--											</div>-->
+<!--											&lt;!&ndash; End .product-details-quantity &ndash;&gt;-->
+<!--										</div>-->
 										<!-- End .details-filter-row -->
 
 										<div class="product-details-action">
