--- a/src/main/resources/templates/client/fragments/header.html
+++ b/src/main/resources/templates/client/fragments/header.html
@@ -59,7 +59,7 @@
 								<div class="col-lg-8 col-xxl-4-5col d-none d-lg-block">
 									<div class="header-search header-search-extended header-search-visible header-search-no-radius">
 										<a href="#" class="search-toggle" role="button"><i class="icon-search"></i></a>
-										<form th:action="@{/car/client(field=${field})}">
+										<form th:action="@{/car/client(startDate=${startDate}, startTime=${startTime}, endDate=${endDate}, endTime=${endTime}, location=${location})}">
 											<div class="header-search-wrapper search-wrapper-wide">
 												<!-- End .select-custom -->
 												<label for="q" class="sr-only">Tìm kiếm</label> <input type="search" class="form-control"
@@ -201,7 +201,7 @@
 												<a href="#change-modal" data-toggle="modal">Đổi mật khẩu</a>
 											</li>
 
-											<li th:if="${role != null && role == 'ROLE_CAR_OWNER'}">
+											<li th:if="${currentUser.role.name == 'ROLE_CAR_OWNER'}">
 												<a th:href="@{/car-owner/my-car}">Danh sách xe</a>
 											</li>
 
