--- a/src/main/resources/templates/client/carOwner/createcar.html
+++ b/src/main/resources/templates/client/carOwner/createcar.html
@@ -42,7 +42,7 @@
             <div class="col-md-6">
                 <div class="form-group">
                     <label for="licensePlate">Name:</label>
-                    <input type="text" class="form-control" th:id="nameOfCar"
+                    <input type="text" class="form-control" id="nameOfCar"
                            th:field="*{name}">
                     <div class="text-danger" th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></div>
                 </div>
@@ -237,6 +237,11 @@
                 <label for="price">Price:</label>
                 <span id="price" name="price" ></span>
             </div>
+            <div class="form-group">
+                <label for="depositAmount">Required Deposit:</label>
+                <span id="depositAmount" name="depositAmount" ></span>
+            </div>
+
             <div class="form-group">
                 <label for="location">Location:</label>
                 <span  id="location" name="location" ></span>
